syntax = "proto3";
package gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins;

option java_multiple_files = true;
option java_package = "gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins.personproperties.testsupport.input";


enum TestPersonPropertyIdInput {
    PERSON_PROPERTY_1_BOOLEAN_MUTABLE_NO_TRACK = 0;
    PERSON_PROPERTY_2_INTEGER_MUTABLE_NO_TRACK = 1;
    PERSON_PROPERTY_3_DOUBLE_MUTABLE_NO_TRACK = 2;
    PERSON_PROPERTY_4_BOOLEAN_MUTABLE_TRACK = 3;
    PERSON_PROPERTY_5_INTEGER_MUTABLE_TRACK = 4;
    PERSON_PROPERTY_6_DOUBLE_MUTABLE_TRACK = 5;
    PERSON_PROPERTY_7_BOOLEAN_IMMUTABLE_NO_TRACK = 6;
    PERSON_PROPERTY_8_INTEGER_IMMUTABLE_NO_TRACK = 7;
    PERSON_PROPERTY_9_DOUBLE_IMMUTABLE_NO_TRACK = 8;
}
